# udemy-bert-nlp

./: .gitignore  pyproject.toml
section_2/: 02_pytorch_transformers.ipynb
