[tool.poetry]
name = "bert-nlp"
version = "0.1.0"
description = ""
authors = ["MakMemEng <yatani.mems4568@gmail.com>"]
readme = "README.md"
packages = [{include = "bert_nlp"}]

[tool.poetry.dependencies]
python = "^3.10"

boto3 = "^1.7.84"
botocore = "^1.10.84"
branca = "^0.6.0"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
click = "^8.1.7"
docutils = "^0.20.1"
filelock = "^3.12.3"
folium = "^0.14.0"
idna = "^3.4"
jinja2 = "^3.1.2"
jmespath = "^0.10.0"
joblib = "^1.3.2"
markupsafe = "^2.1.3"
mpmath = "^1.3.0"
networkx = "^3.1"
numpy = "^1.25.2"
python-dateutil = "^2.8.2"
pytorch-transformers = "^1.2.0"
regex = "^2023.8.8"
requests = "^2.31.0"
s3transfer = "^0.1.13"
sacremoses = "^0.0.53"
sentencepiece = "^0.1.99"
six = "^1.16.0"
sympy = "^1.12"
torch = "^2.0.1"
tqdm = "^4.66.1"
typing-extensions = "^4.7.1"
urllib3 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
